--- a/spring-boot/pom.xml
+++ b/spring-boot/pom.xml
@@ -65,6 +65,12 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/x
 		<artifactId>spring-boot-starter-validation</artifactId> 
 	</dependency>
 
+	<dependency>
+		<groupId>commons-codec</groupId>
+		<artifactId>commons-codec</artifactId>
+    <version>1.11</version>
+</dependency>
+
 </dependencies>
 
 <build>
