--- a/spring-boot/pom.xml
+++ b/spring-boot/pom.xml
@@ -26,10 +26,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/x
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-thymeleaf</artifactId>
 	</dependency>
-	<dependency>
-    	<groupId>org.springframework.boot</groupId>
-    	<artifactId>spring-boot-starter-security</artifactId>
-	</dependency>
+	
 	<dependency>
    		<groupId>org.thymeleaf.extras</groupId>
     	<artifactId>thymeleaf-extras-springsecurity5</artifactId>
@@ -84,6 +81,23 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/x
 		<artifactId>jotp</artifactId>
 		<version>1.3.0</version>
 	</dependency>
+
+	<dependency>
+	<groupId>org.springframework.security</groupId>
+	<artifactId>spring-security-web</artifactId>
+	<version>5.4.2</version>
+	</dependency>
+	
+	<dependency>
+	<groupId>org.springframework.security</groupId>
+	<artifactId>spring-security-config</artifactId>
+	<version>5.4.2</version>
+	</dependency>
+
+	<!--dependency>
+    	<groupId>org.springframework.boot</groupId>
+    	<artifactId>spring-boot-starter-security</artifactId>
+	</dependency-->
 </dependencies>
 
 <build>
